# advent-of-code

./: LICENSE.md  README.md
2015-Rust/: Cargo.toml
2015-Rust/src/: lib.rs  main.rs
2015-Rust/src/days/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs
2016-Zig/: build.zig  main.zig
2016-Zig/src/: day_01.zig  day_02.zig  day_03.zig  day_04.zig  day_05.zig  day_06.zig  day_07.zig  day_08.zig  day_09.zig  day_10.zig  day_11.zig  day_12.zig  day_13.zig  day_14.zig  day_15.zig  day_16.zig  day_17.zig  day_18.zig  day_19.zig  day_20.zig  day_21.zig  day_22.zig  day_23.zig  day_24.zig  day_25.zig  main.zig
2017-Swift/inputs/: day_19.txt
2017-Swift/src/: day_01.swift  day_02.swift  day_03.swift  day_04.swift  day_05.swift  day_06.swift  day_07.swift  day_08.swift  day_09.swift  day_10.swift  day_11.swift  day_12.swift  day_13.swift  day_14.swift  day_15.swift  day_16.swift  day_17.swift  day_18.swift  day_19.swift  day_20.swift  day_21.swift  day_22.swift  day_23.swift  day_24.swift  day_25.swift
2018-Julia/inputs/: day_13.txt
2018-Julia/src/: day_01.jl  day_02.jl  day_03.jl  day_04.jl  day_05.jl  day_06.jl  day_07.jl  day_08.jl  day_09.jl  day_10.jl  day_11.jl
2019-Nim/src/: day_01.nim
2020-Racket/src/: day_01.rkt
2021-Crystal/src/: day_01.cr
2022-Roc/src/: day_01.roc
2023-Mojo/src/: day_01.🔥
(+1 files in other folders)
