[package]
name = "advent_of_code"
version = "1.0.0"
authors = ["Georgy Trush <tensorush@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
itertools = "0.10.1"
serde_json = "1.0.66"
permutohedron = "0.2.4"